feat: Implement initial full-stack bookstore application with user authentication, product, cart, order, review, and settings management.